testsuite/tests/parser/should_fail/readFail025.hs
module M where

-- This one actually compiled right the way up to GHC 5.04.3

data T String = T String
